--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -783,13 +783,13 @@ input {
 
 .profile-container {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   padding: 10px;
   justify-content: center;
 }
 
 .profile-item {
-  width:20%;
+  width:40%;
   padding: 10px;
   border: 1px solid #ccc;
   background-color: #fff;
@@ -802,7 +802,6 @@ input {
   margin-right: 5px;
   min-height: 300px;
   min-width: 240px;
-  height: 350px;
 }
 .profile-item img{
   width: 150px;
@@ -819,6 +818,8 @@ input {
   font-weight: 300;
   text-align: center;
   color: #e67e22;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 .profile-item h2 {
   font-size: 16px;
@@ -849,23 +850,33 @@ input {
   margin-left: 10px;
   margin-right: 5px;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 .profile-review {
-  padding: 10px 30px 10px 30px;
+  // padding: 10px 30px 10px 30px;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
+  // display: flex;
+  // flex-direction: column;
+  // align-items: stretch;
   background-color: #fff;
   border-radius: 4px;
   font-size: 16px;
   font-weight: 300;
-  margin-bottom: 10px;
+  
+}
+
+.user-profile {
+  margin-bottom: 20px;
   border: 1px solid #ccc;
+  border-radius: 3px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
 }
 
 .profile-review ul{
@@ -875,7 +886,7 @@ input {
   // padding: 5px;
   border: 1px solid #ccc;
   margin-bottom: 10px;
-  border-radius: 3px;
+  border-radius: 3px;  
 }
 
 .profile-review h1 {
@@ -928,8 +939,8 @@ input {
 }
 
 .profile-booking-container {
-  width:40%;
-  padding: 5px;
+  width:100%;
+  padding: 30px;
   background-color: #fff;
   border-radius: 3px;
   height: 340px;
@@ -937,10 +948,9 @@ input {
 }
 
 .profile-booking-container h1 {
-  font-size: 22px;
-  font-weight: 400;
-  text-align: center;
-  color: #2c2c54;
+  font-size: 20px;
+  font-weight: 300;
+  color: #000;
 }
 
 
@@ -953,6 +963,7 @@ input {
   border-radius: 4px;
   font-size: 16px;
   border: 1px solid #ccc;
+  margin-bottom: 10px;
 }
 
 
@@ -967,7 +978,7 @@ input {
   -webkit-appearance: none;
   padding: 13px 10px;
   border-radius: 3px;
-  border: 1px solid #2c2c54;
+  border: 1px solid #ccc;
   font-size: 14px;
   font-weight: 300;
   // margin-bottom: 10px; 
@@ -990,9 +1001,9 @@ input {
 .review-form input[type="submit"] {
   -webkit-appearance: none;
   text-decoration: none;
-  padding: 10px 22px;
+  padding: 8px 16px;
   font-size: 14px;
-  font-weight: 400;
+  font-weight: 300;
   border-radius: 3px;
   border: none;
   color: #fff;
@@ -1010,8 +1021,8 @@ input {
 }
 
 .review-form  h1 {
-  font-size: 22px;
-  font-weight: 400;
+  font-size: 20px;
+  font-weight: 300;
   color: #000;
   margin-top: 0;
 }
@@ -1112,10 +1123,9 @@ input {
   padding: 10px;
 }
 .datepickers input[type='date']{
-  margin-left: 10px;
   font-size: 14px;
   padding: 4px;
-  border: 1px solid #2c2c54;
+  border: 1px solid #ccc;
   border-radius: 3px;
 }
 
@@ -1134,7 +1144,7 @@ input {
   font-family: Roboto, sans-serif;
   font-weight: 300;
   border-radius: 4px;
-  border: 1px solid #2c2c54;
+  border: 1px solid #ccc;
 }
 
 ::placeholder {
@@ -1154,13 +1164,13 @@ input {
 
 .submit-booking input {
   margin-left: 15px;
-  padding: 8px;
+  padding: 8px 16px;
   background-color: #2c2c54;;
   color: #fff;
   border-radius: 3px;
   border: none;
   font-family: Roboto, sans-serif;
-  font-weight: 400;
+  font-weight: 300;
   font-size: 14px;
 }
 .submit-booking input:hover {
@@ -1279,6 +1289,19 @@ input {
   }
   .host-list-container {
       justify-content: space-around;
+  }
+  .review-form, .profile-booking-container {
+    padding: 10px;
+  }
+  .profile-reviews-container {
+    width: 55%;
+  }
+  .pfofile-item {
+    width: 45%;
+  }
+  .container-menu {
+    border-left: none;
+    border-right: none;
   }
 }
 
@@ -1421,6 +1444,55 @@ input {
   .host-list-container li{
     width: 100%;
   }
+  .profile-container {
+    flex-direction: column;
+    align-items: center;
+  }
+  .profile-reviews-container {
+    margin: 0;
+    margin-top: 10px;
+  }
+  .profile-item, .profile-reviews-container {
+    width: 100%;
+    padding: 0;
+    border: 0;
+  }
+  .profile-item li:last-child {
+    margin-bottom: 0;
+  }
+  .review-form h1, .profile-booking-container h1 {
+    font-size: 18px;
+  }
+  .datepickers {
+    flex-direction: column;
+    align-items: flex-end;
+    padding-right: 0;     
+  }
+  .datepickers input[type='date'] {
+    margin-bottom: 5px;
+    margin-left: 5px;
+  }
+  .review-form input[type="submit"], .submit-booking input{
+    font-size: 12px;
+  }
+  .confirmation-container h2 {
+    font-size: 16px;
+    font-weight: 300;
+  }
+  .booking-details {
+    padding: 0;
+  }
+  .arrival-departure strong, .arrival-departure p{
+    font-size: 13px;
+  }
+  .message strong {
+    font-size: 13px;
+    text-align: center;
+  }
+  .booking-submit button {
+    font-weight: 200;
+    font-size: 12px;
+  }
 }
 
 
@@ -1458,4 +1530,14 @@ input {
   .location-background {
     padding-top: 38px;
   }
+  .datepickers {
+    flex-direction: column;
+    align-items: flex-end;
+    padding-right: 0;     
+  }
+  .datepickers input[type='date'] {
+    margin-bottom: 5px;
+    margin-left: 5px;
+  }
+  
 }
