--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -42,7 +42,6 @@ body {
   border-bottom: 1px solid #ccc;
   border-left: 1px solid #ccc;
   border-right: 1px solid #ccc;
-  // border: 1px solid #ccc;
   border-top: none;
   align-items: center;
   
@@ -1333,7 +1332,8 @@ input {
 
 }
 .custom-menu {
-    position: absolute;
+    // position: absolute;
+    position: fixed;
     display: block;
     width: 100%;
     height: 250px;
@@ -1645,6 +1645,11 @@ input {
     font-weight: 200;
     font-size: 12px;
   }
+  .table-options td {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+  
 }
 
 
