--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -735,6 +735,7 @@ input {
   border-radius: 3px;
   min-width: 310px;
   box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, .2);
+  cursor: pointer;
 }
 
 .host-list-item-container {
