--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -47,7 +47,7 @@
   margin-left: 10px;
 }
 
-.modal-form button, input[type="submit"], input[type="reset"], {
+.modal-form button, input[type="submit"] {
   -webkit-appearance: none;
   text-decoration: none;
   padding: 10px 22px;
