--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1127,6 +1127,7 @@ input {
   padding: 4px;
   border: 1px solid #ccc;
   border-radius: 3px;
+  margin-left: 5px;
 }
 
 .host-message {
@@ -1177,10 +1178,10 @@ input {
   color: #e67e22;
 }
 
-// .submit-booking input[type='reset'] {
-//   padding: 8px 14px;
-//   -webkit-appearance: none;
-// }
+.submit-booking input[type='reset'], .submit-booking input[type="submit"] {
+  padding: 8px 14px;
+  -webkit-appearance: none;
+}
 
 .confirmation-container {
   padding: 5px;
@@ -1189,7 +1190,7 @@ input {
 .confirmation-container h2 {
   margin-top: 20px;
   font-size: 20px;
-  font-weight: 400;
+  font-weight: 300;
   text-align: center;
 }
 
@@ -1233,6 +1234,11 @@ input {
   margin-bottom: 5px;
 }
 
+.message strong {
+  font-weight: 300;
+  color: #0a43b3;
+}
+
 .booking-submit {
   display: flex;
   justify-content: flex-end;
@@ -1247,7 +1253,7 @@ input {
   border-radius: 3px;
   border: none;
   font-family: Roboto, sans-serif;
-  font-weight: 400;
+  font-weight: 300;
   font-size: 14px;
   cursor: pointer;
 }
@@ -1623,7 +1629,7 @@ input {
   }
   .datepickers input[type='date'] {
     margin-bottom: 5px;
-    margin-left: 5px;
+    margin-left: 5px;    
   }
   .review-form input[type="submit"], .submit-booking input{
     font-size: 12px;
